--- a/webapp/WEB-INF/views/MyPage/main.html
+++ b/webapp/WEB-INF/views/MyPage/main.html
@@ -6,7 +6,7 @@
 <head>
 <meta charset="UTF-8">
 <title>마이페이지</title>
-<link rel="stylesheet" href="../../assets/css/mypage.css">
+<link rel="stylesheet" href="../../../assets/css/myPage.css">
 
 </head>
 <body>
@@ -23,8 +23,8 @@
 		
 		
 		<div class="subHeader">
-			<img id="menuBar-open" src="../../assets/images/menu.png">
-			<p id="title">마이페이지 <img id="myHome" src="../../assets/images/house.png"></p>
+			<img id="menuBar-open" src="../../../assets/image/myPage/menu.png">
+			<p id="title">마이페이지 <img id="myHome" src="../../../assets/image/myPage/house.png"></p>
 		</div>
 		
 		
@@ -43,7 +43,7 @@
 			
 			<ol>
 				<li>
-				  	<img id="imgBox" src="../../assets/images/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">신나는 코스</p>
 						<p id="courseInfo">홍길동 * 2022-07-01</p>
@@ -51,7 +51,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../assets/images/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">이건아닌데...</p>
 						<p id="courseInfo">고길동 * 2022-07-01</p>
@@ -59,7 +59,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../assets/images/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">깐따삐야행성으로 가는 길</p>
 						<p id="courseInfo">둘리 * 2022-07-01</p>
@@ -67,7 +67,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../assets/images/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">집에 가는 길</p>
 						<p id="courseInfo">김자바 * 2022-07-01</p>
@@ -85,7 +85,7 @@
 			
 			<ol>
 				<li>
-				  	<img id="imgBox" src="../../assets/images/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">집에 가는 길</p>
 						<p id="courseInfo">김자바 * 2022-07-01</p>
@@ -93,7 +93,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../assets/images/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">학원 가는 길</p>
 						<p id="courseInfo">가나다 * 2022-07-01</p>
@@ -101,7 +101,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../assets/images/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">법원 가는 길</p>
 						<p id="courseInfo">우영우 * 2022-07-01</p>
@@ -109,7 +109,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../assets/images/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">코스이름 없음</p>
 						<p id="courseInfo">아무개 * 2022-07-01</p>
