--- a/webapp/assets/css/together.css
+++ b/webapp/assets/css/together.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import "clearfix.css";
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 
 body, div, ul, li, dl, dt, ol, h1, h2, h3, h4, h5, h6, 
