--- a/webapp/WEB-INF/views/board/board.html
+++ b/webapp/WEB-INF/views/board/board.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link href="../../assets/css/board.css" rel="stylesheet" type="text/css">
+<link href="../../../assets/css/board.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
