--- a/webapp/WEB-INF/views/board/board.html
+++ b/webapp/WEB-INF/views/board/board.html
@@ -50,7 +50,7 @@
 					<tr>
 						<th>1</th>
 						<td class="center">[소통]</td>
-						<td>도림천 다녀오는 길![21]<img class="photo" src="../../assets/image/photo.png"></td>
+						<td>도림천 다녀오는 길![21]<img class="photo" src="../../../assets/image/board/photo.png"></td>
 						<td class="center">신림러</td>
 						<td class="center">47</td>
 						<td class="center">2022.07.25</td>
@@ -59,7 +59,7 @@
 					<tr>
 						<th>2</th>
 						<td class="center">[함께]</td>
-						<td>한강 사진 공유~[14]<img class="photo" src="../../assets/image/photo.png"></td>
+						<td>한강 사진 공유~[14]<img class="photo" src="../../../assets/image/board/photo.png"></td>
 						<td class="center">프리러너</td>
 						<td class="center">21</td>
 						<td class="center">2022.07.25</td>
@@ -68,7 +68,7 @@
 					<tr>
 						<th>3</th>
 						<td class="center">[소통]</td>
-						<td>러닝화 구매 후기[4]<img class="photo" src="../../assets/image/photo.png"></td>
+						<td>러닝화 구매 후기[4]<img class="photo" src="../../../assets/image/board/photo.png"></td>
 						<td class="center">하이슈즈</td>
 						<td class="center">17</td>
 						<td class="center">2022.07.25</td>
@@ -77,7 +77,7 @@
 					<tr>
 						<th>4</th>
 						<td class="center">[소통]</td>
-						<td>관악산 정상뷰[16]<img class="photo" src="../../assets/image/photo.png"></td>
+						<td>관악산 정상뷰[16]<img class="photo" src="../../../assets/image/board/photo.png"></td>
 						<td class="center">올하이킹</td>
 						<td class="center">54</td>
 						<td class="center">2022.07.25</td>
