--- a/webapp/WEB-INF/views/MyPage/main.html
+++ b/webapp/WEB-INF/views/MyPage/main.html
@@ -15,7 +15,6 @@
 		<!--메인 해더 자리 -->
 		<div class="header">헤더자리</div>
 		
-			
 		
 		<div class="subHeader">
 			<img id="menuBar-open" src="../../../assets/image/myPage/menu.png">
@@ -75,7 +74,7 @@
 		
 		
 		
-		<div class="resultList">
+		<!-- <div class="resultList">
 			<p id="listTitle">좋아요 한 코스들</p>
 			
 			<ol>
@@ -112,7 +111,7 @@
 				</li>
 			
 			</ol>
-		</div>
+		</div> -->
 		
 		
 		
