--- a/webapp/assets/css/myPage.css
+++ b/webapp/assets/css/myPage.css
@@ -14,16 +14,17 @@
 .subHeader #myHome {width: 50px; height: 50px;}
 
 
-.resultList /* {display:inline-block; text-align: center; margin: 20px 0px 100px 0px; border: 1px solid #73AD21;} */
-{display: inline-block; text-align:center; border:solid 1px #111111; 
-			width:1100px; height:700px; padding:49px 49px 0px 49px;}
 
-.resultList #listTitle {font: 28px "나눔고딕"; text-align:left; border: 1px solid #73AD21; padding:0px; margin:0px 0px 20px 0px;}
-.resultList li { width:23%; display : inline - block ; float : left ; list-style: none; border: 1px solid #73AD21;}
-.resultList li #imgBox {/* width: 260px ; */ height: 186px ;  border: 1px solid #73AD21; }
-.resultList li #textBox {text-align:left; /* width: 250px ; */ height: 50px ;  border: 1px solid #73AD21; }
+
+.resultList {position: absolute; left: 50%; transform: translateX(-50%); display: center; text-align:center; border:solid 1px #111111; width:90%; padding: 50px;}
+
+.resultList #listTitle {display:center; font: 28px "나눔고딕"; text-align:left; border: 1px solid #73AD21; padding:0px; margin:0px 0px 20px 0px;}
+.resultList ol { width:100%; display :center; border: 1px solid #73AD21;}
+.resultList li { width:23%; float : left ; list-style: none; border: 1px solid #73AD21; margin:0px 10px}
+.resultList li #imgBox {width:100%; height: 186px ;  border: 1px solid #73AD21; }
+/* .resultList li #textBox {text-align:left; width: 250px ; height: 50px ;  border: 1px solid #73AD21; }
 .resultList li #textBox #courseName {font-weight:bold; font:20px "나눔고딕"; line-height: 30px; }
-.resultList li #textBox #courseInfo {font:16px "나눔고딕"; color: gray;}
+.resultList li #textBox #courseInfo {font:16px "나눔고딕"; color: gray;} */
 
 
 
