--- a/webapp/WEB-INF/views/together/together.html
+++ b/webapp/WEB-INF/views/together/together.html
@@ -41,7 +41,7 @@
 					<table>
 						<thead>
 							<tr>
-								<th class="line_top">2022/07/24 - 2022/07/30</th>
+								<th class="line_top">2022/07/24 - 2022/07/30<img class="bookmark" src="../../../assets/image/together/bookmarks_black.png"></th>
 							</tr>
 						</thead>
 						<tbody>
