--- a/webapp/assets/css/together.css
+++ b/webapp/assets/css/together.css
@@ -5,7 +5,15 @@
 
 /******************** 게시판 머리글 ********************/
 
-h1 {margin-left: 400px;}
+h1 {
+	margin-left: 400px;
+	margin: 80px 0px 64px 0px;
+	font-size: 46px;
+	font-family: 'Nanum Gothic';
+	font-weight: 700;
+	letter-spacing: -1px;
+	text-align: center;
+}
 
 /******************* 소분류 카테고리 *******************/
 
@@ -35,6 +43,9 @@ a {
 #together_make {
 	float: left;
 	padding: 15px 25px;
+	background-color: rgb(50, 108, 249);
+	border:none;
+	color: white;
 }
 
 /****************** 태그와 참여 분류 ******************/
@@ -60,6 +71,12 @@ table {
 	height: 30px;
 }
 .line_bottom {border-top: solid 1px #ccc;}
+/** 태그 아이콘 **/
+th>.bookmark {
+	width : 23px;
+	height: 20px;
+	margin-left: 15px;
+}
 
 /*************** 함께하기 리스트 더보기 버튼 ***************/
 
