--- a/webapp/assets/css/course.css
+++ b/webapp/assets/css/course.css
@@ -34,7 +34,7 @@ input[type=radio] {display:none;}
 	text-align: center;
 }
 /* p 태그 사이즈 */
-#content .course-form p {font-size: 15px;}
+#content .course-form p {font-size: 15px; margin: 0px 10px 0px 0px;}
 
 
 
@@ -53,6 +53,18 @@ input[type=radio] {display:none;}
 	border-top: 1px solid rgb(204, 204, 204);
 }
 
+/* 코스지정 */
+.course-form input[name="address"] {width: 89%;}
+.course-form .guide {color: rgb(136, 136, 136);}
+.course-form .address-form {margin: 15px 0px 10px 0px;}
+.course-form #address-btn {
+	width: 90px;
+	height: 46px;
+	margin: 0px 0px 0px 10px;
+	background-color: rgb(35, 45, 74);
+	color: rgb(255, 255, 255);
+}
+
 /* 텍스트박스 */
 .course-form input[type="text"] {
 	height: 46px;
@@ -60,4 +72,41 @@ input[type=radio] {display:none;}
 	box-sizing: border-box;
 	border:  1px solid rgb(223, 223, 223);
 }
-.course-form input[type="text"]+.text-width {width: 300px;}
+.txt-long {width: 100%;}
+.txt-short {width: 110px; margin: 0px 12px 0px 0px;}
+input[name="address"] {width: 89%;}
+
+
+/* radio 버튼 css */
+label {
+	display: inline-block;
+	text-align: center;
+	width: 82px;
+	line-height: 46px;
+	margin: 0px 12px 0px 0px;
+	padding: 0px 15px;
+	color: rgb(102, 102, 102);
+	border: 1px solid rgb(217, 217, 217);
+	border-radius: 3px;
+	background-color: rgb(255,255,255);
+}
+
+input[type="radio"]:checked+label {
+	color: rgb(255,255,255);
+	border-color: rgb(50, 108, 249);
+	background-color: rgb(50, 108, 249);
+}
+
+
+
+
+
+
+/* 아래 버튼 */
+#btn-wrap {text-align: center;}
+#btn-wrap>button {
+	width: 160px;
+	height: 50px;
+	font-size: 15px;
+}
+#btn-wrap>.add {margin: 0px 0px 0px 12px;}
