--- a/webapp/WEB-INF/views/MyPage/main.html
+++ b/webapp/WEB-INF/views/MyPage/main.html
@@ -31,89 +31,110 @@
 		
 		
 		
-		
-		<div class="resultList">
-			<p id="listTitle">최근 조회한 코스들</p>
+		<div class="resultView">
+			<div class="resultList">
+				<p id="listTitle">최근 조회한 코스들</p>
+				<ol>
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">신나는 코스</p>
+							<p id="courseInfo">홍길동 * 2022-07-01</p>
+					  	</div>
+					</li>
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">이건아닌데...</p>
+							<p id="courseInfo">고길동 * 2022-07-01</p>
+					  	</div>
+					</li>
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">깐따삐야행성으로 가는 길</p>
+							<p id="courseInfo">둘리 * 2022-07-01</p>
+					  	</div>
+					</li>
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">집에 가는 길</p>
+							<p id="courseInfo">김자바 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">신나는 코스2</p>
+							<p id="courseInfo">홍길동 * 2022-07-01</p>
+					  	</div>
+					</li>
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">이건아닌데...</p>
+							<p id="courseInfo">고길동 * 2022-07-01</p>
+					  	</div>
+					</li>
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">깐따삐야행성으로 가는 길</p>
+							<p id="courseInfo">둘리 * 2022-07-01</p>
+					  	</div>
+					</li>
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">집에 가는 길</p>
+							<p id="courseInfo">김자바 * 2022-07-01</p>
+					  	</div>
+					</li>
+				</ol> 
+			</div>
 			
-			<ol>
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">신나는 코스</p>
-						<p id="courseInfo">홍길동 * 2022-07-01</p>
-				  	</div>
-				</li>
-				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">이건아닌데...</p>
-						<p id="courseInfo">고길동 * 2022-07-01</p>
-				  	</div>
-				</li>
-				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">깐따삐야행성으로 가는 길</p>
-						<p id="courseInfo">둘리 * 2022-07-01</p>
-				  	</div>
-				</li>
-				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">집에 가는 길</p>
-						<p id="courseInfo">김자바 * 2022-07-01</p>
-				  	</div>
-				</li>
 			
-			</ol> 
+			<div class="resultList">
+				<p id="listTitle">좋아요 한 코스들</p>
+				
+				<ol>
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">집에 가는 길</p>
+							<p id="courseInfo">김자바 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">학원 가는 길</p>
+							<p id="courseInfo">가나다 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">법원 가는 길</p>
+							<p id="courseInfo">우영우 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">코스이름 없음</p>
+							<p id="courseInfo">아무개 * 2022-07-01</p>
+					  	</div>
+					</li>
+				</ol>
+			</div>
 		</div>
-		
-		
-		
-		
-		<!-- <div class="resultList">
-			<p id="listTitle">좋아요 한 코스들</p>
-			
-			<ol>
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">집에 가는 길</p>
-						<p id="courseInfo">김자바 * 2022-07-01</p>
-				  	</div>
-				</li>
-				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">학원 가는 길</p>
-						<p id="courseInfo">가나다 * 2022-07-01</p>
-				  	</div>
-				</li>
-				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">법원 가는 길</p>
-						<p id="courseInfo">우영우 * 2022-07-01</p>
-				  	</div>
-				</li>
-				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">코스이름 없음</p>
-						<p id="courseInfo">아무개 * 2022-07-01</p>
-				  	</div>
-				</li>
-			
-			</ol>
-		</div> -->
-		
-		
 		
 		
 		
