--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>나의 코스 보기</title>
-<link rel="stylesheet" href="../../../assets/css/myPage.css">
+<link rel="stylesheet" href="../../../assets/css/my-page.css">
 
 </head>
 <body>
@@ -20,10 +20,10 @@
 		
 		
 		<div class="subHeader">
-			<img id="menuBar-open" src="../../../assets/image/myPage/menu.png">
+			<img id="menuBar-open" src="../../../assets/image/my-page/menu.png">
 			<p id="title">(즐겨찾기이름) 
-				<img id="myHome" src="../../../assets/image/myPage/star.png">&nbsp;
-				<img id="myHome" src="../../../assets/image/myPage/edit.png">
+				<img id="myHome" src="../../../assets/image/my-page/star.png">&nbsp;
+				<img id="myHome" src="../../../assets/image/my-page/edit.png">
 			</p>
 		</div>
 		
@@ -41,7 +41,7 @@
 		<div class="resultList">
 			<ol>
 				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">집에 가는 길</p>
 						<p id="courseInfo">김자바 * 2022-07-01</p>
@@ -49,7 +49,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">학원 가는 길</p>
 						<p id="courseInfo">가나다 * 2022-07-01</p>
@@ -57,7 +57,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">법원 가는 길</p>
 						<p id="courseInfo">우영우 * 2022-07-01</p>
@@ -65,7 +65,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">코스이름 없음</p>
 						<p id="courseInfo">아무개 * 2022-07-01</p>
@@ -80,7 +80,7 @@
 		<div class="resultList">
 			<ol>
 				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">집에 가는 길</p>
 						<p id="courseInfo">김자바 * 2022-07-01</p>
@@ -88,7 +88,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">학원 가는 길</p>
 						<p id="courseInfo">가나다 * 2022-07-01</p>
@@ -96,7 +96,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">법원 가는 길</p>
 						<p id="courseInfo">우영우 * 2022-07-01</p>
@@ -104,7 +104,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">코스이름 없음</p>
 						<p id="courseInfo">아무개 * 2022-07-01</p>
