--- a/webapp/WEB-INF/views/my-page/main.html
+++ b/webapp/WEB-INF/views/my-page/main.html
@@ -6,7 +6,7 @@
 <head>
 <meta charset="UTF-8">
 <title>마이페이지</title>
-<link rel="stylesheet" href="../../../assets/css/myPage.css">
+<link rel="stylesheet" href="../../../assets/css/my-page.css">
 
 </head>
 <body>
@@ -17,8 +17,8 @@
 		
 		
 		<div class="subHeader">
-			<img id="menuBar-open" src="../../../assets/image/myPage/menu.png">
-			<p id="title">마이페이지 <img id="myHome" src="../../../assets/image/myPage/house.png"></p>
+			<img id="menuBar-open" src="../../../assets/image/my-page/menu.png">
+			<p id="title">마이페이지 <img id="myHome" src="../../../assets/image/my-page/house.png"></p>
 		</div>
 		
 		
@@ -36,28 +36,28 @@
 				<p id="listTitle">최근 조회한 코스들</p>
 				<ol>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 					  	<div id="textBox">
 							<p id="courseName">신나는 코스</p>
 							<p id="courseInfo">홍길동 * 2022-07-01</p>
 					  	</div>
 					</li>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 					  	<div id="textBox">
 							<p id="courseName">이건아닌데...</p>
 							<p id="courseInfo">고길동 * 2022-07-01</p>
 					  	</div>
 					</li>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 					  	<div id="textBox">
 							<p id="courseName">깐따삐야행성으로 가는 길</p>
 							<p id="courseInfo">둘리 * 2022-07-01</p>
 					  	</div>
 					</li>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 					  	<div id="textBox">
 							<p id="courseName">집에 가는 길</p>
 							<p id="courseInfo">김자바 * 2022-07-01</p>
@@ -66,28 +66,28 @@
 					
 					
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 					  	<div id="textBox">
 							<p id="courseName">신나는 코스2</p>
 							<p id="courseInfo">홍길동 * 2022-07-01</p>
 					  	</div>
 					</li>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 					  	<div id="textBox">
 							<p id="courseName">이건아닌데...</p>
 							<p id="courseInfo">고길동 * 2022-07-01</p>
 					  	</div>
 					</li>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 					  	<div id="textBox">
 							<p id="courseName">깐따삐야행성으로 가는 길</p>
 							<p id="courseInfo">둘리 * 2022-07-01</p>
 					  	</div>
 					</li>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 					  	<div id="textBox">
 							<p id="courseName">집에 가는 길</p>
 							<p id="courseInfo">김자바 * 2022-07-01</p>
@@ -102,7 +102,7 @@
 				
 				<ol>
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 					  	<div id="textBox">
 							<p id="courseName">집에 가는 길</p>
 							<p id="courseInfo">김자바 * 2022-07-01</p>
@@ -110,7 +110,7 @@
 					</li>
 					
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 					  	<div id="textBox">
 							<p id="courseName">학원 가는 길</p>
 							<p id="courseInfo">가나다 * 2022-07-01</p>
@@ -118,7 +118,7 @@
 					</li>
 					
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 					  	<div id="textBox">
 							<p id="courseName">법원 가는 길</p>
 							<p id="courseInfo">우영우 * 2022-07-01</p>
@@ -126,7 +126,7 @@
 					</li>
 					
 					<li>
-					  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 					  	<div id="textBox">
 							<p id="courseName">코스이름 없음</p>
 							<p id="courseInfo">아무개 * 2022-07-01</p>
