--- a/webapp/WEB-INF/views/my-page/menubar.html
+++ b/webapp/WEB-INF/views/my-page/menubar.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>메뉴바</title>
-<link rel="stylesheet" href="../../../assets/css/myPage.css">
+<link rel="stylesheet" href="../../../assets/css/my-page.css">
 
 </head>
 <body>
 	<div class="menuBar">
 		<div class="menu1">
 			<ol>
-				<li id="mypage">마이페이지 <img id="myHome" src="../../../assets/image/myPage/house.png"></li>
+				<li id="mypage">마이페이지 <img id="myHome" src="../../../assets/image/my-page/house.png"></li>
 				<li id="list">나의 코스 보기</li>
 				<li id="list">나의 기록 보기</li>
 			</ol>
@@ -18,10 +18,10 @@
 		
 		<div class="menu2">
 			<ol>
-				<li id="bookmark">즐겨찾기 <img id="bmStar" src="../../../assets/image/myPage/star.png"></li>
+				<li id="bookmark">즐겨찾기 <img id="bmStar" src="../../../assets/image/my-page/star.png"></li>
 				<li id="bookmark-btn">
-					<img id="plus-btn" src="../../../assets/image/myPage/plus.png">&nbsp; 
-					<img id="minus-btn" src="../../../assets/image/myPage/minus.png">
+					<img id="plus-btn" src="../../../assets/image/my-page/plus.png">&nbsp; 
+					<img id="minus-btn" src="../../../assets/image/my-page/minus.png">
 				</li>
 				<li id="list">서울 근교 코스</li>
 				<li id="list">웃겨 자빠질 코스</li>
@@ -31,7 +31,7 @@
 		
 		<div class="menu3">
 			<ol>
-				<li id="members"><p>회원정보수정 <img id="setting" src="../../../assets/image/myPage/setting.png"></p></li>
+				<li id="members"><p>회원정보수정 <img id="setting" src="../../../assets/image/my-page/setting.png"></p></li>
 			</ol>
 		</div>
 	</div>
