--- a/webapp/WEB-INF/views/my-page/my-course.html
+++ b/webapp/WEB-INF/views/my-page/my-course.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>나의 코스 보기</title>
-<link rel="stylesheet" href="../../../assets/css/myPage.css">
+<link rel="stylesheet" href="../../../assets/css/my-page.css">
 
 </head>
 <body>
@@ -20,8 +20,8 @@
 		
 		
 		<div class="subHeader">
-			<img id="menuBar-open" src="../../../assets/image/myPage/menu.png">
-			<p id="title">나의 코스 보기 <img id="myHome" src="../../../assets/image/myPage/walking.png"></p>
+			<img id="menuBar-open" src="../../../assets/image/my-page/menu.png">
+			<p id="title">나의 코스 보기 <img id="myHome" src="../../../assets/image/my-page/walking.png"></p>
 		</div>
 		
 		
@@ -38,7 +38,7 @@
 		<div class="resultList">
 			<ol>
 				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">신나는 코스</p>
 						<p id="courseInfo">2022-07-01</p>
@@ -46,7 +46,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">구불구불 코스</p>
 						<p id="courseInfo">2022-07-01</p>
@@ -54,7 +54,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">ABC</p>
 						<p id="courseInfo">2022-07-01</p>
@@ -62,7 +62,7 @@
 				</li>
 				
 				<li>
-				  	<img id="imgBox" src="../../../assets/image/myPage/sample.jpg">
+				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
 				  	<div id="textBox">
 						<p id="courseName">DEF</p>
 						<p id="courseInfo">2022-07-01</p>
