--- a/webapp/WEB-INF/views/my-page/my-report.html
+++ b/webapp/WEB-INF/views/my-page/my-report.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>나의 코스 보기</title>
-<link rel="stylesheet" href="../../../assets/css/myPage.css">
+<link rel="stylesheet" href="../../../assets/css/my-page.css">
 
 </head>
 <body>
@@ -20,8 +20,8 @@
 		
 		
 		<div class="subHeader">
-			<img id="menuBar-open" src="../../../assets/image/myPage/menu.png">
-			<p id="title">나의 기록 보기 <img id="myHome" src="../../../assets/image/myPage/diary.png"></p>
+			<img id="menuBar-open" src="../../../assets/image/my-page/menu.png">
+			<p id="title">나의 기록 보기 <img id="myHome" src="../../../assets/image/my-page/diary.png"></p>
 		</div>
 		
 		
@@ -47,31 +47,31 @@
 				<ul>
 					<li id="listTitle"></li>
 					<li id="contentBox">
-						<img id="contentImg" src="../../../assets/image/myPage/sample.jpg">
+						<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
 						<p id="contentTitle">내가 여기 왔다감ㅋ</p>
 						<p id="content">링거 맞고 뛰었다^^</p>
 						<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
 					</li>
 					<li id="contentBox">
-						<img id="contentImg" src="../../../assets/image/myPage/sample.jpg">
+						<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
 						<p id="contentTitle">우앙우앙우앙</p>
 						<p id="content">우앙우앙우앙^^</p>
 						<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
 					</li>
 					<li id="contentBox">
-						<img id="contentImg" src="../../../assets/image/myPage/sample.jpg">
+						<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
 						<p id="contentTitle">산책 재밌다</p>
 						<p id="content">산책 다녀왔는데 좋았네</p>
 						<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
 					</li>
 					<li id="contentBox">
-						<img id="contentImg" src="../../../assets/image/myPage/sample.jpg">
+						<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
 						<p id="contentTitle">무더위</p>
 						<p id="content">요즘 날씨 미친거 같다</p>
 						<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
 					</li>
 					<li id="contentBox">
-						<img id="contentImg" src="../../../assets/image/myPage/sample.jpg">
+						<img id="contentImg" src="../../../assets/image/my-page/sample.jpg">
 						<p id="contentTitle">살려줘ㅠㅠ</p>
 						<p id="content">html/css너무 귀찮다ㅠㅠ</p>
 						<p id="contentDate">2022.07.18 &nbsp; 10:03</p>
