--- a/webapp/WEB-INF/views/my-page/my-course.html
+++ b/webapp/WEB-INF/views/my-page/my-course.html
@@ -34,42 +34,43 @@
 		
 		
 		
-		
-		<div class="resultList">
-			<ol>
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">신나는 코스</p>
-						<p id="courseInfo">2022-07-01</p>
-				  	</div>
-				</li>
+		<div class="resultView">
+			<div class="resultList">
+				<ol>
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">신나는 코스</p>
+							<p id="courseInfo">2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">구불구불 코스</p>
+							<p id="courseInfo">2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">ABC</p>
+							<p id="courseInfo">2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">DEF</p>
+							<p id="courseInfo">2022-07-01</p>
+					  	</div>
+					</li>
 				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">구불구불 코스</p>
-						<p id="courseInfo">2022-07-01</p>
-				  	</div>
-				</li>
-				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">ABC</p>
-						<p id="courseInfo">2022-07-01</p>
-				  	</div>
-				</li>
-				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">DEF</p>
-						<p id="courseInfo">2022-07-01</p>
-				  	</div>
-				</li>
-			
-			</ol>
+				</ol>
+			</div>
 		</div>
 		
 		
