--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -16,9 +16,9 @@
 
 
 .resultView {min-width:1200px; position: absolute; left: 50%; transform: translateX(-50%); display: center;}
-.resultList {display:inline-block; text-align:center; border:solid 1px #111111; width:100%; padding: 50px 50px 0px 50px;}
+.resultList {display:inline-block; text-align:center; border:solid 1px #111111; padding: 50px 33px 0px 33px;}
 
-.resultList #listTitle {display:center; font: 28px "나눔고딕"; text-align:left; border: 1px solid #73AD21; padding:0px; margin:0px 0px 20px 0px;}
+.resultList #listTitle {display:center; font-size: 28px; text-align:left; border: 1px solid #73AD21; padding:0px; margin:0px 0px 20px 0px;}
 .resultList ol { width:100%; display :center; border: 1px solid #73AD21;}
 .resultList li {width:(25%-margin); float : left ; list-style: none; border: 1px solid #73AD21; margin:0px 20px 40px 0px}
 .resultList li #imgBox {width:280; height: 186px ;}
