--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -3,7 +3,7 @@
 @import "clearfix.css";
 
 /**************************************************************************/
-/* 마이페이지-메인 *************************************************************/
+/* 마이페이지-메인/나의코스/나의기록 *************************************************************/
 /**************************************************************************/
 .header {background-color: #F1F1F1; text-align: center;   padding: 20px;}
 
