--- a/webapp/WEB-INF/views/best/best.html
+++ b/webapp/WEB-INF/views/best/best.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link rel="stylesheet"  href="/javaStudy/workspace_web/JOA/assets/css/joa.css">
+<link rel="stylesheet" href="../../../assets/css/best.css" type="text/css">
 
 <style>
 
