--- a/webapp/WEB-INF/views/my-page/bookmark.html
+++ b/webapp/WEB-INF/views/my-page/bookmark.html
@@ -37,87 +37,123 @@
 		
 		
 		
-		
-		<div class="resultList">
-			<ol>
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">집에 가는 길</p>
-						<p id="courseInfo">김자바 * 2022-07-01</p>
-				  	</div>
-				</li>
+		<div class="resultView">
+			<div class="resultList">
+				<ol>
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">집에 가는 길</p>
+							<p id="courseInfo">김자바 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">학원 가는 길</p>
+							<p id="courseInfo">가나다 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">법원 가는 길</p>
+							<p id="courseInfo">우영우 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">코스이름 없음</p>
+							<p id="courseInfo">아무개 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					
+					
+					
+					
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">집에 가는 길</p>
+							<p id="courseInfo">김자바 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">학원 가는 길</p>
+							<p id="courseInfo">가나다 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">법원 가는 길</p>
+							<p id="courseInfo">우영우 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">코스이름 없음</p>
+							<p id="courseInfo">아무개 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">집에 가는 길</p>
+							<p id="courseInfo">김자바 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">학원 가는 길</p>
+							<p id="courseInfo">가나다 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">법원 가는 길</p>
+							<p id="courseInfo">우영우 * 2022-07-01</p>
+					  	</div>
+					</li>
+					
+					<li>
+					  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
+					  	<div id="textBox">
+							<p id="courseName">코스이름 없음</p>
+							<p id="courseInfo">아무개 * 2022-07-01</p>
+					  	</div>
+					</li>
 				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">학원 가는 길</p>
-						<p id="courseInfo">가나다 * 2022-07-01</p>
-				  	</div>
-				</li>
-				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">법원 가는 길</p>
-						<p id="courseInfo">우영우 * 2022-07-01</p>
-				  	</div>
-				</li>
-				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">코스이름 없음</p>
-						<p id="courseInfo">아무개 * 2022-07-01</p>
-				  	</div>
-				</li>
-			
-			</ol>
+				</ol>
+			</div>
 		</div>
-		
-		
-		
-		<div class="resultList">
-			<ol>
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">집에 가는 길</p>
-						<p id="courseInfo">김자바 * 2022-07-01</p>
-				  	</div>
-				</li>
-				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">학원 가는 길</p>
-						<p id="courseInfo">가나다 * 2022-07-01</p>
-				  	</div>
-				</li>
-				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">법원 가는 길</p>
-						<p id="courseInfo">우영우 * 2022-07-01</p>
-				  	</div>
-				</li>
-				
-				<li>
-				  	<img id="imgBox" src="../../../assets/image/my-page/sample.jpg">
-				  	<div id="textBox">
-						<p id="courseName">코스이름 없음</p>
-						<p id="courseInfo">아무개 * 2022-07-01</p>
-				  	</div>
-				</li>
-			
-			</ol>
-		</div>
-		
-		
-		
-		
-		
 		
 		
 		
