--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -38,18 +38,18 @@
 
 
 .menuBar .menu1 {width:(100%-padding); height:(20%-padding); border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px; }
-.menuBar .menu1 #mypage {font: 24px "나눔고딕"; font-weight:bold;}
+.menuBar .menu1 #mypage {font-size: 24px; font-weight:bold;}
 .menuBar #myHome {width: 24px; height: 24px;}
 
 .menuBar .menu2 {width:(100%-padding); height:(60%-padding); border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px;}
-.menuBar .menu2 #bookmark {font-size: 24px; float:left; font-weight:bold;  }
+.menuBar .menu2 #bookmark {font-size: 24px; float:left; font-weight:bold;}
 .menuBar #bmStar {width: 24px; height: 24px;}
 .menuBar .menu2 #bookmark-btn {text-align:right}
 .menuBar #plus-btn {width: 24px; height: 24px;}
 .menuBar #minus-btn {width: 24px; height: 24px;}
 
-.menuBar .menu3 {width:(100%-padding); height: (20%-padding); /* border-bottom:solid 1px #000000; */ text-align:left;  padding:20px 30px; }
-.menuBar .menu3 #members {font: 24px "나눔고딕"; font-weight:bold; }
+.menuBar .menu3 {width:(100%-padding); height: (20%-padding); text-align:left;  padding:20px 30px; }
+.menuBar .menu3 #members {font-size: 24px; font-weight:bold; }
 .menuBar #setting {width: 24px; height: 24px;}
 
 
